# NekoPhysics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Assets/Arts/Character/Cat/: cat_arm_Atlas.asset  cat_arm_Material.mat  cat_arm_SkeletonData.asset  cat_noarm_Atlas.asset  cat_noarm_Material.mat  cat_noarm_SkeletonData.asset
Assets/Plugins/NekoPhysics/: Body.cs  Fixed.cs  NekoPhysics.asmdef  Vec2f.cs
Assets/Plugins/NekoPhysics/Managed/: Body.cs  BodyCpp.cs  NekoPhysicsManaged.asmdef  PhysicsManager.cs  PhysicsManagerCpp.cs  Vector2f.cs
Assets/Plugins/NekoPhysics/x86_64/: readme.txt
Assets/Prefabs/Sample/01_Kinematic/: KinematicBody.prefab
Assets/Scenes/: 01_Kinematic.unity  Kittymanjaro.unity  SampleScene.unity
Assets/Scripts/: Body.cs  PhysicsManager.cs
Assets/Scripts/Sample/01_KinematicSample/: KinematicSample.cs
Assets/Tests/: FixedTest.cs  Tests.asmdef
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
cpp/Physics/: CMakeLists.txt  vcpkg.json
cpp/Physics/include/: aabb.h  circle.h  fixed.h  physics.h  physics_export.h  physics_type.h  quadtree.h  shape.h  vec2.h
cpp/Physics/include/bsh/: bsh.h  quadtree.h
cpp/Physics/include/core/: allocator.h
cpp/Physics/include/math/: fixed.h  fixed_lut.h  shape.h  vec2.h
cpp/Physics/include/physics/: contact_listener.h  contact_solver.h  physics.h  physics_export.h  physics_type.h
cpp/Physics/main/: main.cpp
cpp/Physics/main/samples/: 01_kinematic.cpp  01_kinematic.h  02_planets.cpp  02_planets.h  03_triggers.cpp  03_triggers.h  04_collision.cpp  04_collision.h  04_ground.cpp  random_utils.h  sample.cpp  sample.h
cpp/Physics/scripts/: gen_fixed_table.py
cpp/Physics/src/: allocator.cpp  contact_solver.cpp  fixed.cpp  fixed_lut.cpp  physics.cpp  physics_export.cpp  quadtree.cpp
cpp/Physics/tests/: aabb_test.cpp  bsh_test.cpp  fixed_test.cpp  quadtree_test.cpp  vec2f_test.cpp
include/bsh/: bsh.h  quadtree.h
include/core/: allocator.h
include/math/: angle.h  const.h  fixed.h  fixed_lut.h  func.h  shape.h  sixit_float.h  vec2.h
include/physics/: contact_listener.h  physics.h  physics_type.h
main/: main.cpp
main/samples/: 01_kinematic.cpp  02_planets.cpp  03_triggers.cpp  03_triggers.h  04_ground.cpp  04_ground.h  05_collisions.cpp  05_collisions.h  06_move_into.cpp  06_move_into.h  sample.cpp  sample.h
src/: allocator.cpp  contact_solver.cpp  fixed.cpp  fixed_lut.cpp  physics.cpp  quadtree.cpp
tests/: aabb_test.cpp  bsh_test.cpp  fixed_test.cpp  quadtree_test.cpp  vec2f_test.cpp
